package com.mhm.action.command;

/**
 * 命令的抽象
 *
 * @author MHm
 * @date 2020-4-20 13:47
 */
public interface Command {
    void excute();
}
