package com.mhm.action.command;

/**
 * 命令接受者
 *
 * @author MHm
 * @date 2020-4-20 13:48
 */
public class Receiver {
    public void action() {
        System.out.println("接收者触发命令执行");
    }
}
